--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,13 @@
                 <div class="pause button">Pause</div>
                 <div class="start button">Start</div>
                 <div class="reset button">Reset</div>
+                <div class="labB button">Lap</div>
+            </div>
+            <div class="labs">
+                <!-- <div class="lab">
+                    <div class="labN"></div>
+                    <div class="labTime"></div>
+                </div> -->
             </div>
         </div>
         <script src="script.js" ></script>
